# btrmap

./: .gitignore  CLAUDE.md  LICENSE  README.md  btrfs_snapdiff_spec.md  pyproject.toml
docs/superpowers/plans/: 2026-05-25-btrfs-snapdiff.md
src/btrmap/: main.py
src/btrmap/btrfs/: diff.py  subvolumes.py
src/btrmap/model/: diff_tree.py  enrichment.py  filter.py
src/btrmap/ui/: filter_panel.py  main_window.py  snapshot_selector.py  tree_view.py  treemap.py
src/btrmap/utils/: subprocess.py
src/snapdiff/: main.py
src/snapdiff/btrfs/: diff.py  subvolumes.py
src/snapdiff/model/: diff_tree.py  enrichment.py
src/snapdiff/ui/: main_window.py  snapshot_selector.py  tree_view.py  treemap.py
src/snapdiff/utils/: subprocess.py
tests/: conftest.py  test_diff_parser.py  test_diff_tree.py  test_enrichment.py  test_filter.py  test_subvolumes.py  test_treemap_layout.py  test_visual_render.py
