[project]
name = "btrfs-snapdiff"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
]

[project.scripts]
snapdiff = "snapdiff.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
