[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btrmap"]

[project]
name = "btrmap"
version = "0.1.0"
description = "PyQt6 desktop tool that visually compares two btrfs snapshots as a file tree and squarified treemap"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["btrfs", "snapshot", "diff", "treemap", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.6",
]

[project.urls]
Homepage = "https://github.com/nimaajhep/btrmap"
Repository = "https://github.com/nimaajhep/btrmap"
Issues = "https://github.com/nimaajhep/btrmap/issues"

[project.scripts]
btrmap = "btrmap.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
